--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,21 +1,21 @@
-<div class="container">
+<div class="container bg-white">
     <div class="row header">
-        <div class="col-4 pe-0 header-col">
-            <p class="d-inline ps-1 pe-0"><a class="text-white" href="">My NHS Claim.com</a></p>
+        <div class="col-4 pe-0 header-col ms-5">
+            <p class="d-inline ps-1 pe-0"><a  href="">My PM Claim.com</a></p>
  
         </div>
         <div class="col-8  ms-4">
-            <p class="my-0 py-0 reg ">Register Your Interest In Making A Group Claim Against NHS England
+            <p class="my-0 py-0 reg fs-4">Register your interest in a group claim against the Prime Minister and Justice Secretary 
 
             </p>
-            <p class="mt-0 mb-1 py-0  sub-header-details fw-semi-bold">Fighting for NHS Patients right to surgery and... right to have complaints dealt with properly and fairly.
+            <p class="mt-0 mb-1 py-0 fs-6 sub-header-details fw-semi-bold">Exposing and challenging Wrongdoers to protect people from government and HMCTS harm, wrong doing and injustice. 
 
             </p>
         </div>
 
     </div>
-    <div class="row bg-black">
-        <ul class="bg-black text-white mb-0 d-flex">
+    <div class="row nav">
+        <ul class=" text-white mb-0 d-flex">
             <li class="px-2 py-2 fw-semibold" ><a href="" class="text-white">Home</a></li>
             <div class="dropdown">
 
@@ -38,6 +38,10 @@
                 
                 </div>
               </div>
+              <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white">Aspiration</a></li>
+              <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white">Wanted </a></li>
+              <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white">Legal </a></li>
+
         </ul>
 
     </div>
