--- a/src/app/side-menu/side-menu.component.html
+++ b/src/app/side-menu/side-menu.component.html
@@ -1,12 +1,14 @@
-<div class="example-menu" cdkMenu>
-    <button class="example-menu-item pt-2 pb-2" cdkMenuItem>Web Page Link</button>
-    <button class="example-menu-item pt-2 pb-2" cdkMenuItem>Web Page Link</button>
-    <button class="example-menu-item pt-2 pb-2" cdkMenuItem>Web Page Link</button>
-    <button class="example-menu-item pt-2 pb-2" cdkMenuItem>Web Page Link</button>
-    <button class="example-menu-item pt-2 pb-2" cdkMenuItem>Web Page Link</button>
-    <button class="example-menu-item pt-2 pb-2" cdkMenuItem>Web Page Link</button>
-    <button class="example-menu-item pt-2 pb-2" cdkMenuItem>Web Page Link</button>
-    <button class="example-menu-item pt-2 pb-2" cdkMenuItem>Web Page Link</button>
-    <button class="example-menu-item pt-2 pb-2" cdkMenuItem>Web Page Link</button>
-    <button class="example-menu-item pt-2 pb-2" cdkMenuItem>Web Page Link</button>
+<div class="example-menu text-center" cdkMenu>
+    <a class="example-menu-item pt-1 pb-1 w-100 text-center" cdkMenuItem>Web Page Link</a>
+    <a class="example-menu-item pt-1 pb-1" cdkMenuItem>Web Page Link</a>
+    <a class="example-menu-item pt-1 pb-1" cdkMenuItem>Web Page Link</a>
+    <a class="example-menu-item pt-1 pb-1" cdkMenuItem>Web Page Link</a>
+    <a class="example-menu-item pt-1 pb-1" cdkMenuItem>Web Page Link</a>
+    <a class="example-menu-item pt-1 pb-1" cdkMenuItem>Web Page Link</a>
+    <a class="example-menu-item pt-1 pb-1" cdkMenuItem>Web Page Link</a>
+    <a class="example-menu-item pt-1 pb-1" cdkMenuItem>Web Page Link</a>
+    <a class="example-menu-item pt-1 pb-1" cdkMenuItem>Web Page Link</a>
+
+
+
   </div>
