--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="container mb-0">
     <div class="row mb-0">
-        <p class="text-white text-center pt-2 mt-1"><a href="www.mynhsclaim.com " class="text-white text-decoration-none">www.mynhsclaim.com </a>is a Public Interest Disclosure website</p>
+        <p class="text-white text-center pt-2 mt-1"><a href="" class="text-white text-decoration-none">www.mynpmclaim.com </a>is a Public Interest Disclosure website</p>
     </div>
 </div>
