--- a/src/app/home-form/home-form.component.html
+++ b/src/app/home-form/home-form.component.html
@@ -1,8 +1,8 @@
-<section class="container pe-0">
-    <div class="header text-uppercase text-white fs-6 px-3 py-2">
-      registering your eon uk plc claim interest
+<section class="container px-0">
+    <div class="header text-uppercase text-white fs-6 px-1">
+     <p class="small px-4">registering your eon uk plc claim interest</p> 
     </div>
-    <div class="form p-3">
+    <div class="form p-2">
       <div class="user d-flex justify-content-between">
         <div class="firstname">
           <input type="text" class="form-control" placeholder="Your first name">
