--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -4,7 +4,6 @@
     src: url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
   }
 .header{
-    background-color: #7697ca !important;
     font-family: 'Times New Roman', Times, serif;
     font-size: 2.5vw;
 
@@ -77,4 +76,7 @@ li:hover a{
   
  .small{
     font-size: 15px;
+ }
+ .nav{
+  background-color: rgba(10,73,126,255);
  }
