--- a/src/app/side-menu/side-menu.component.css
+++ b/src/app/side-menu/side-menu.component.css
@@ -1,9 +1,7 @@
 .example-menu {
     display: inline-flex;
     flex-direction: column;
-    min-width: 180px;
-    max-width: 280px;
-    background-color: rgb(255, 255, 255);
+   
   }
   
   .example-menu-item {
@@ -19,14 +17,12 @@
     flex-direction: row;
     flex: 1;
   }
-  .example-menu-item:not(:last-child){
-    border-bottom: 2px solid #e5e2e1;
-  }
-  .example-menu-item:hover {
+
+  /* .example-menu-item:hover {
     background-color: rgb(208, 208, 208);
   }
-  
-  .example-menu-item:active {
+   */
+  /* .example-menu-item:active {
     background-color: rgb(170, 170, 170);
-  }
+  } */
   
