--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -5,7 +5,7 @@
  
         </div>
         <div class="col-8  ms-4">
-            <p class="my-0 py-0 reg fs-5">Register your interest in a group claim against the Prime Minister and Justice Secretary 
+            <p class="my-0 py-0 reg ">Register your interest in a group claim against the Prime Minister and Justice Secretary 
 
             </p>
             <p class="mt-0 mb-1 py-0  sub-header-details fw-semi-bold">Exposing and challenging Wrongdoers to protect people from government and HMCTS harm, wrong doing and injustice. 
