--- a/src/app/home-form/home-form.component.html
+++ b/src/app/home-form/home-form.component.html
@@ -1,6 +1,6 @@
 <section class="container px-0">
     <div class="header text-uppercase text-white fs-6 px-1">
-     <p class="small px-4">registering your eon uk plc claim interest</p> 
+     <span class="small px-3">registering your eon uk plc claim interest</span> 
     </div>
     <div class="form p-2">
       <div class="user d-flex justify-content-between">
