--- a/src/app/home-form/home-form.component.html
+++ b/src/app/home-form/home-form.component.html
@@ -1,13 +1,13 @@
 <section class="container px-0">
     <div class="header text-uppercase text-white fs-6 px-1">
-     <span class="small px-1">registering your eon uk plc claim interest</span> 
+     <span class="small px-1 py-3">registering your eon uk plc claim interest</span> 
     </div>
     <div class="form p-2">
       <div class="user d-flex justify-content-between">
-        <div class="firstname">
+        <div class="firstname mt-2">
           <input type="text" class="form-control" placeholder="Your first name">
         </div>
-        <div class="lastname">
+        <div class="lastname mt-2">
           <input type="text" class="form-control" placeholder="Your last name">
         </div>
       </div>
@@ -15,7 +15,7 @@
         <input type="email" class="form-control" placeholder="Your email address">
       </div>
     </div>
-    <div class="register">
+    <div class="register mt-2">
       <button class="text-uppercase border-0 w-100 text-white">register your interest now!</button>
     </div>
   </section>
