--- a/src/app/side-menu/side-menu.component.html
+++ b/src/app/side-menu/side-menu.component.html
@@ -1,13 +1,35 @@
 <div class="example-menu text-center" cdkMenu>
-    <a class="example-menu-item pt-1 pb-1 w-100 text-center" cdkMenuItem>Web Page Link</a>
-    <a class="example-menu-item pt-1 pb-1" cdkMenuItem>Web Page Link</a>
-    <a class="example-menu-item pt-1 pb-1" cdkMenuItem>Web Page Link</a>
-    <a class="example-menu-item pt-1 pb-1" cdkMenuItem>Web Page Link</a>
-    <a class="example-menu-item pt-1 pb-1" cdkMenuItem>Web Page Link</a>
-    <a class="example-menu-item pt-1 pb-1" cdkMenuItem>Web Page Link</a>
-    <a class="example-menu-item pt-1 pb-1" cdkMenuItem>Web Page Link</a>
-    <a class="example-menu-item pt-1 pb-1" cdkMenuItem>Web Page Link</a>
-    <a class="example-menu-item pt-1 pb-1" cdkMenuItem>Web Page Link</a>
+  <p class="fs-5 py-0 my-0">Claimant</p>
+  <span class="my-0 py-0">V</span>
+    <a class="example-menu-item fs-5  text-center mx-auto" cdkMenuItem>Rishi Sunak Prime Minister</a>
+    <a class="example-menu-item   text-center mx-auto" cdkMenuItem>Dominic Raab Justice Secretary </a>
+    <a class="example-menu-item   text-center mx-auto" cdkMenuItem>Steve Barclays Health Secretary</a>
+    <a class="example-menu-item   text-center mx-auto" cdkMenuItem>Mel Stride  DWP Secretary</a>
+    <a class="example-menu-item   text-center mx-auto" cdkMenuItem>Grnat Shapps Business Secretary </a>
+    <a class="example-menu-item   text-center mx-auto" cdkMenuItem>Simon Case Cabinet Secretary</a>
+    <a class="example-menu-item   text-center mx-auto" cdkMenuItem>Jennifer Eady EAT President</a>
+    <a class="example-menu-item   text-center mx-auto" cdkMenuItem>High Court Manager Master Suillivan</a>
+    <a class="example-menu-item   text-center mx-auto" cdkMenuItem>Reading County Court Manager</a>
+    <a class="example-menu-item   text-center mx-auto" cdkMenuItem>Southampton County Court Manager</a>
+    <a class="example-menu-item   text-center mx-auto" cdkMenuItem>Winchester County Court Manager</a>
+    <a class="example-menu-item   text-center mx-auto" cdkMenuItem>Circuit Court Judge Richard Parkes</a>
+    <a class="example-menu-item   text-center mx-auto" cdkMenuItem>Circuit Court Judge Melissa Clarke</a>
+    <a class="example-menu-item   text-center mx-auto" cdkMenuItem>District Judge Andrew Grand</a>
+    <a class="example-menu-item   text-center mx-auto" cdkMenuItem>Deputy District Judge Andrew Kirkconel</a>
+    <p class="small px-5 pt-2">My PM Claim.com Founder is making 2023 Claim against PM and 14 Others. asking the court to decide if the PM and government minsters court conspired to prevent Claimants 2020,2021,2022 court filled claim Succeeding</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
