--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,12 +9,12 @@
     </div>  
         </div>
      
-<div class="col-md-4  my-4 pe-5">
+<div class="col-md-4  my-4 px-5">
         <div class="aside mt-3 d-flex flex-column bg-light mb-4">
             <p class="text-uppercase bg-dark text-white py-1 text-center">2023 rishi sunak pm and 14 others claim</p>
             <app-side-menu class="w-100 text-center"></app-side-menu>
-            <a class="mt-1 text-decoration-none text-center pointer mb-4"  (click)="openVerticallyCentered()">Read More</a>
-            <button class="btn btn-primary">Learn More ...</button>
+            <a class=" my-0 mb-1 py-0 text-decoration-none text-center pointer"  (click)="openVerticallyCentered()">Read On ...</a>
+            <button class="learn fs-5 text-white">Learn More ...</button>
         </div>      
 </div>
  
