--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -15,7 +15,7 @@
 
     </div>
     <div class="row nav">
-        <ul class=" text-white mb-0 d-flex">
+        <ul class=" text-white mb-0 mx-4 d-flex">
             <li class="px-2 py-2 fw-semibold" ><a href="" class="text-white">Home</a></li>
             <div class="dropdown">
 
