--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,23 +1,16 @@
-<div class="container px-0 home bg-white">
-    <div class="row mx-0">
-        <div class="col-md-8 my-3">
-                <div class="content my-3">
-<img src="assets/My PM Claim Landing Page (1).png" class="w-100 px-4">
-    </div>
-    <div class="email position-absolute">
-        <app-home-form></app-home-form>
-    </div>  
-        </div>
+<div class="container px-0 home bg-white d-flex gap-3">
+<div class="content my-2 d-flex">
+        <img src="assets/My PM Claim Landing Page.jpg" class="w-100 px-4">
+        <div class="email position-absolute">
+            <app-home-form></app-home-form>
+        </div>  
+</div>
+
      
-<div class="col-md-4  my-4 px-5">
-        <div class="aside mt-3 d-flex flex-column bg-light mb-4">
+<div class="aside mt-3 d-flex flex-column bg-light mb-4">
             <p class="text-uppercase bg-dark text-white py-1 text-center">2023 rishi sunak pm and 14 others claim</p>
             <app-side-menu class="w-100 text-center"></app-side-menu>
             <a class=" my-0 mb-1 py-0 text-decoration-none text-center pointer"  (click)="openVerticallyCentered()">Read On ...</a>
             <button class="learn fs-5 text-white">Learn More ...</button>
-        </div>      
-</div>
- 
-    </div>
- 
+ </div>       
 </div>
