--- a/src/app/home-form/home-form.component.html
+++ b/src/app/home-form/home-form.component.html
@@ -15,7 +15,7 @@
         <input type="email" class="form-control" placeholder="Your email address">
       </div>
     </div>
-    <div class="register mt-2">
-      <button class="text-uppercase border-0 w-100 text-white">register your interest now!</button>
+    <div class="register mt-0">
+      <button class="text-uppercase mt-0 border-0 w-100 fs-6 fw-bold text-white">register your claim interest now!</button>
     </div>
   </section>
