--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -18,3 +18,14 @@ img{
 .aside{
     max-width: 350px;
 }
+section .content {
+    height: 100%;
+  }
+  section .content .web-image img {
+    width: 100%;
+  }
+  section .content .email {
+    right: 1.5rem;
+    bottom: 4.5rem;
+  }
+  
