--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,10 @@
-<div class="container px-0 home bg-white d-flex gap-3">
-<div class="content my-2 d-flex">
-        <img src="assets/My PM Claim Landing Page.jpg" class="w-100 px-4">
-        <div class="email position-absolute">
-            <app-home-form></app-home-form>
-        </div>  
-</div>
-
-     
-<div class="aside mt-3 d-flex flex-column bg-light mb-4">
-            <p class="text-uppercase bg-dark text-white py-1 text-center">2023 rishi sunak pm and 14 others claim</p>
-            <app-side-menu class="w-100 text-center"></app-side-menu>
-            <a class=" my-0 mb-1 py-0 text-decoration-none text-center pointer"  (click)="openVerticallyCentered()">Read On ...</a>
-            <button class="learn fs-5 text-white">Learn More ...</button>
- </div>       
-</div>
+<section class="d-flex flex-column fs-2 text-capitalize fw-bold position-relative">
+    <div class="content bg-white">
+      <div class="web-image px-3">
+        <img class="landing-image mb-3" src="assets/My PM Claim Landing Page.jpg" alt="Payless Landing Page">
+      </div>
+      <div class="email position-absolute">
+        <app-home-form></app-home-form>
+      </div>
+    </div>
+  </section>
