--- a/src/app/side-menu/side-menu.component.html
+++ b/src/app/side-menu/side-menu.component.html
@@ -1,4 +1,5 @@
-<div class="example-menu text-center" cdkMenu>
+<div class="example-menu text-center border border-dark" cdkMenu>
+  <p _ngcontent-vfs-c42="" class="text-uppercase bg-dark text-white py-2 m-0 ps-1 small text-center"> 2023 rishi sunak pm and 14 others claim</p>
   <p class="fs-5 py-0 my-0">Claimant</p>
   <span class="my-0 py-0">V</span>
     <a class="example-menu-item fs-5  text-center mx-auto" cdkMenuItem>Rishi Sunak Prime Minister</a>
@@ -17,6 +18,7 @@
     <a class="example-menu-item   text-center mx-auto" cdkMenuItem>District Judge Andrew Grand</a>
     <a class="example-menu-item   text-center mx-auto" cdkMenuItem>Deputy District Judge Andrew Kirkconel</a>
     <p class="small px-5 pt-2">My PM Claim.com Founder is making 2023 Claim against PM and 14 Others. asking the court to decide if the PM and government minsters court conspired to prevent Claimants 2020,2021,2022 court filled claim Succeeding</p>
+    <button class="text-white border-0 py-2 fs-5"> Learn More ...</button>
 
 
 
