--- a/src/app/home-form/home-form.component.html
+++ b/src/app/home-form/home-form.component.html
@@ -1,6 +1,6 @@
 <section class="container px-0">
     <div class="header text-uppercase text-white fs-6 px-1">
-     <span class="small px-3 py-3 text-uppercase mx-auto">registering your Moj group claim interest</span> 
+     <p class="small  text-uppercase text-center">registering your group claim interest</p> 
     </div>
     <div class="form p-2">
       <div class="user d-flex justify-content-between">
