--- a/src/app/side-menu/side-menu.component.css
+++ b/src/app/side-menu/side-menu.component.css
@@ -2,7 +2,8 @@
     display: inline-flex;
     flex-direction: column;
     min-width: 289px;
-    max-width: 364px;
+    max-width: 320px;
+    border-bottom-color: transparent !important;
 
 
    
@@ -35,8 +36,12 @@
     background-color: rgb(170, 170, 170);
   } */
   .small{
-    font-size: 15px;
+    font-size: 13px;
   }
   button{
-    background-color: #0a497e;
+    background-color: rgb(66, 133, 244)
+  }
+  .xsmall{
+    font-size: 12px;
+    line-height: 1.1;
   }
