--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -16,7 +16,7 @@
     </div>
     <div class="row nav">
         <ul class=" text-white mb-0 mx-4 ps-3 d-flex">
-            <li class="px-2 py-2 ps-2 fw-semibold" ><a href="" class="text-white">Home</a></li>
+            <li class="px-2 py-2 ps-2 fw-semibold home" ><a href="" class="text-white">Home</a></li>
             <div class="dropdown">
 
             <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white dropbtn">About</a></li>
