--- a/src/app/side-menu/side-menu.component.html
+++ b/src/app/side-menu/side-menu.component.html
@@ -21,7 +21,7 @@
     <a class="example-menu-item   text-center mx-auto" cdkMenuItem>Circuit Court Judge Melissa Clarke</a>
     <a class="example-menu-item   text-center mx-auto" cdkMenuItem>District Judge Andrew Grand</a>
     <a class="example-menu-item   text-center mx-auto" cdkMenuItem>Deputy District Judge Andrew Kirkconel</a>
-    <p class="xsmall px-5 pt-1 mb-0">My PM Claim.com Founder is making 2023 Claim against PM and 14 Others. asking the court to decide if the PM and government minsters court conspired to prevent Claimants 2020,2021,2022 court filled claim Succeeding</p>
+    <p class="xsmall px-5 pt-1 mb-0 fw-semibold">My PM Claim.com Founder is making 2023 Claim against PM and 14 Others. asking the court to decide if the PM and government minsters court conspired to prevent Claimants 2020,2021,2022 court filled claim Succeeding</p>
     <a class="mb-2 mt-0 py-0 pointer">Read More..</a>
     <button class="text-white border-0 py-1 fs-5 text-uppercase fw-semibold"> go to website</button>
 
