--- a/src/app/side-menu/side-menu.component.html
+++ b/src/app/side-menu/side-menu.component.html
@@ -1,5 +1,5 @@
 <div class="example-menu text-center" cdkMenu>
-  <p _ngcontent-vfs-c42="" class="text-uppercase bg-dark text-white side-title m-0 ps-1 small text-center"> 2023 rishi sunak pm and 14 others claim</p>
+  <p _ngcontent-vfs-c42="" class="text-uppercase bg-dark text-white side-title m-0  small text-center"> 2023 rishi sunak pm and 14 others claim</p>
   <p class="fs-6 py-0 my-0">Claimant</p>
   <span class="my-0 py-0">V</span>
   
