--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-3">
     <div class="row mt-2">
-        <p class="text-black m-0  fs-5 text-center pt-2 mt-1"><a href="" class="text-black text-decoration-none">www.mynpmclaim.com </a>is a Public Interest Disclosure website making Disclosures in the public interest</p>
+        <p class="text-black m-0  fs-5 text-center pt-2 mt-1"><a href="" class="text-black text-decoration-none">www.thechangechampions.co.uk</a>is a Public Interest Disclosure Legal Support Service Website</p>
     </div>
 </div>
