--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,14 +1,14 @@
 <div class="container bg-white">
     <div class="row header">
-        <div class="col-4 pe-0 header-col ms-5">
-            <p class="d-inline ps-1 pe-0"><a  href="" class=" PM">My PM Claim.com</a></p>
+        <div class="col-4 pe-0 header-col ms-4">
+            <p class="d-inline ps-1 pe-0"><a  href="" class=" PM">The Change Champions</a></p>
  
         </div>
-        <div class="col-8  ms-2">
-            <p class="my-0 py-0 reg w-100">Register your interest in a group claim against the Prime Minister and Justice Secretary 
+        <div class="col-8  ms-0">
+            <p class="my-0 py-0 reg w-100 mx-0 px-0">The legal service supporting whistleblowing Changemakers
 
             </p>
-            <p class="mt-0 mb-1 py-0 w-100 sub-header-details fw-semi-bold">Exposing and challenging Wrongdoers to protect people from government and HMCTS harm, wrong doing and injustice. 
+            <p class="mt-0 mb-1 py-0 px-0 mx-0 sub-header-details fw-semi-bold">Helping you expose and challenge Wrongdoers, protecting people from government, HMCTS and corporate harm, wrongdoing and injustice. 
 
             </p>
         </div>
@@ -40,6 +40,8 @@
               </div>
               <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white">Aspiration</a></li>
               <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white">Wanted </a></li>
+              <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white">Complaints </a></li>
+
               <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white">Legal </a></li>
 
         </ul>
