--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,10 +1,10 @@
 <div class="container bg-white">
     <div class="row header">
-        <div class="col-4 pe-0 header-col ms-4">
+        <div class="col-4 pe-0 header-col ms-5">
             <p class="d-inline ps-1 pe-0"><a  href="" class=" PM">The Change Champions</a></p>
  
         </div>
-        <div class="col-8  ms-0">
+        <div class="col-8  ms-0 px-2">
             <p class="my-0 py-0 reg w-100 mx-0 px-0">The legal service supporting whistleblowing Changemakers
 
             </p>
