--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -6,6 +6,7 @@
 .header{
     font-family: 'Times New Roman', Times, serif;
     font-size: 35px;
+    background-color: rgb(146, 71, 255);
 
 }
 
@@ -15,6 +16,8 @@ a{
 }
 .header-col{
     width: fit-content;
+    background-color: rgb(146, 71, 255);
+
 }
 .reg{
 
@@ -78,7 +81,7 @@ li:hover a{
     font-size: 15px;
  }
  .nav{
-  background-color: rgba(10,73,126,255);
+  background-color: black
  }
 .PM{
   color: rgba(10,73,126,255) ;
