--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -38,7 +38,7 @@
                 
                 </div>
               </div>
-              <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white">Aspiration</a></li>
+              <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white" routerLink="aspiration">Aspiration</a></li>
               <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white">Wanted </a></li>
               <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white">Complaints </a></li>
 
