--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -22,27 +22,138 @@
             <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white dropbtn">About</a></li>
                 <div class="dropdown-content w-100 py-2 px-2">
                   <a href="#" class="drop-item small my-0 py-0">
-                    April 2022 NHS CEO &amp; Hospital claim
+                    The Change Champions
                 </a>
                 <a href="#" class="drop-item small my-0 py-0">
-                   
-                    Prime Minister and 14 others claim
+                    Change Champions Litigation Team
                                 
                 </a>
                 <a href="#" class="drop-item small my-0 py-0">
                    
 
-                    Register Your Group Claim Interest
+                    2023 Rishi Sunak PM and 20 Others Complaints
                                                                 
                 </a>
-                
+                <a href="#" class="drop-item small my-0 py-0">
+                   
+
+                    2023 Rishi Sunak PM and 3 Others claim
+                                                                
+                </a>
+                <a href="#" class="drop-item small my-0 py-0">
+                   
+
+                    2023 C. S. Venkatakrishnan Barclays PLC CEO claim
+                                                                
+                </a>
+                <a href="#" class="drop-item small my-0 py-0">
+                   
+
+                    2023 Michael Lewis EON UK PLC claim
+                                                                
+                </a>
+                <a href="#" class="drop-item small my-0 py-0">
+                   
+
+                    Government Scams & Practices
+                                                                
+                </a>
+                <a href="#" class="drop-item small my-0 py-0">
+                   
+
+                    HMCTS Scams & Practices
+                                                                
+                </a>
+                <a href="#" class="drop-item small my-0 py-0">
+                   
+
+                    NHS Scams & Practices
+                                                                
+                </a>
+                <a href="#" class="drop-item small my-0 py-0">
+                   
+
+                    Buy The Secret Whistleblower Book
+                                                                
+                </a>
+                <a href="#" class="drop-item small my-0 py-0">
+                   
+
+                    Buy The EON Energy Bill Payment Reduction Legal Rights Guide
+                                                                
+                </a>
+                <a href="#" class="drop-item small my-0 py-0">
+                   
+
+                    Buy The Barclays No Bank Payment Legal Rights Guide
+                                                                
+                </a>
                 </div>
               </div>
-              <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white" routerLink="aspiration">Aspiration</a></li>
-              <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white">Wanted </a></li>
-              <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white">Complaints </a></li>
+             
+              <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white"  routerLink="aspiration">Aspiration </a></li>
+              <div class="dropdown">
+                <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white">Wanted</a></li>
+                  <div class="dropdown-content w-100 py-2 px-2">
+                  <a href="#" class="drop-item small my-0 py-0">
+                    Probono Barristers
+                </a>
+                <a href="#" class="drop-item small my-0 py-0">
+                    Probono Solicitors
+                                
+                </a>
+                <a href="#" class="drop-item small my-0 py-0">
+                   
 
-              <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white">Legal </a></li>
+                    Volenteer Leaflet Distributors
+                                                                
+                </a>
+                <a href="#" class="drop-item small my-0 py-0">
+                   
+
+                    Volenteer Social Media Advocates
+                                                                
+                </a>
+                <a href="#" class="drop-item small my-0 py-0">
+                   
+
+                    Volenteer PR Advocates
+                                                                
+                </a>
+              
+             
+                </div>
+
+              </div>
+              <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white">Complaints </a></li>
+<div class="dropdown">
+        <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white">Legal </a></li>
+        <div class="dropdown-content w-100 py-2 px-2">
+            <a href="#" class="drop-item small my-0 py-0">
+                Change Makers Litigation Team
+            </a>
+          <a href="#" class="drop-item small my-0 py-0">
+            Group Claims
+                          
+          </a>
+          <a href="#" class="drop-item small my-0 py-0">
+             
+
+            Registers interest in HMCTS group claim
+                                                          
+          </a>
+          <a href="#" class="drop-item small my-0 py-0">
+             
+
+            Register interest in NHS group claim
+                                                          
+          </a>
+    
+        
+       
+          </div>
+</div>
+              
 
         </ul>
 
