--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,10 @@
 <section class="d-flex flex-column fs-2 text-capitalize fw-bold position-relative">
     <div class="content bg-white">
       <div class="web-image px-3">
-        <img class="landing-image mb-2" src="assets/My PM Claim Landing Page.jpg" alt="Payless Landing Page">
+        <img class="landing-image mb-2 mt-3" src="../../assets/Landing Page (2).png" alt="Payless Landing Page">
       </div>
-      <div class="email position-absolute">
+      <!-- <div class="email position-absolute">
         <app-home-form></app-home-form>
-      </div>
+      </div> -->
     </div>
   </section>
