--- a/src/app/aspiration/aspiration.component.html
+++ b/src/app/aspiration/aspiration.component.html
@@ -1,7 +1,7 @@
 <section class="d-flex flex-column fs-2 text-capitalize fw-bold position-relative">
     <div class="content bg-white">
       <div class="web-image ">
-        <img class="landing-image mb-2" src="assets/Aspiration Menu Webpage.png" alt="Payless Landing Page">
+        <img class="landing-image mb-2 mt-2" src="../../assets/Menu Bar Aspirations (2).png" alt="Payless Landing Page">
       </div>
     </div>
   </section>
