--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -28,7 +28,7 @@
                     Change Champions Litigation Team
                                 
                 </a>
-                <a href="#" class="drop-item small my-0 py-0">
+                <a routerLink="rishi-Complaints" class="drop-item small my-0 py-0">
                    
 
                     2023 Rishi Sunak PM and 20 Others Complaints
@@ -40,49 +40,49 @@
                     2023 Rishi Sunak PM and 3 Others claim
                                                                 
                 </a>
-                <a href="#" class="drop-item small my-0 py-0">
+                <a routerLink="barclays-plc" class="drop-item small my-0 py-0">
                    
 
                     2023 C. S. Venkatakrishnan Barclays PLC CEO claim
                                                                 
                 </a>
-                <a href="#" class="drop-item small my-0 py-0">
+                <a routerLink="eon-uk" class="drop-item small my-0 py-0">
                    
 
                     2023 Michael Lewis EON UK PLC claim
                                                                 
                 </a>
-                <a href="#" class="drop-item small my-0 py-0">
+                <a routerLink="government-scams" class="drop-item small my-0 py-0">
                    
 
                     Government Scams & Practices
                                                                 
                 </a>
-                <a href="#" class="drop-item small my-0 py-0">
+                <a routerLink="hmcts" class="drop-item small my-0 py-0">
                    
 
                     HMCTS Scams & Practices
                                                                 
                 </a>
-                <a href="#" class="drop-item small my-0 py-0">
+                <a routerLink="nhs-scams" class="drop-item small my-0 py-0">
                    
 
                     NHS Scams & Practices
                                                                 
                 </a>
-                <a href="#" class="drop-item small my-0 py-0">
+                <a routerLink="secret-whistleblower"  class="drop-item small my-0 py-0">
                    
 
                     Buy The Secret Whistleblower Book
                                                                 
                 </a>
-                <a href="#" class="drop-item small my-0 py-0">
+                <a routerLink="buy-eon" class="drop-item small my-0 py-0">
                    
 
                     Buy The EON Energy Bill Payment Reduction Legal Rights Guide
                                                                 
                 </a>
-                <a href="#" class="drop-item small my-0 py-0">
+                <a routerLink="barclays-legal-rights" class="drop-item small my-0 py-0">
                    
 
                     Buy The Barclays No Bank Payment Legal Rights Guide
@@ -95,20 +95,20 @@
               <div class="dropdown">
                 <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white">Wanted</a></li>
                   <div class="dropdown-content w-100 py-2 px-2">
-                  <a href="#" class="drop-item small my-0 py-0">
+                  <a routerLink="probono-barrister" class="drop-item small my-0 py-0">
                     Probono Barristers
                 </a>
                 <a href="#" class="drop-item small my-0 py-0">
                     Probono Solicitors
                                 
                 </a>
-                <a href="#" class="drop-item small my-0 py-0">
+                <a routerLink="volenteer-leaflet" class="drop-item small my-0 py-0">
                    
 
                     Volenteer Leaflet Distributors
                                                                 
                 </a>
-                <a href="#" class="drop-item small my-0 py-0">
+                <a routerLink="social-media" class="drop-item small my-0 py-0">
                    
 
                     Volenteer Social Media Advocates
