--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -21,10 +21,10 @@
 
             <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white dropbtn">About</a></li>
                 <div class="dropdown-content w-100 py-2 px-2">
-                  <a href="#" class="drop-item small my-0 py-0">
+                  <a class="drop-item small my-0 py-0">
                     The Change Champions
                 </a>
-                <a href="#" class="drop-item small my-0 py-0">
+                <a routerLink="Change-Champions-Litigation-Team" class="drop-item small my-0 py-0">
                     Change Champions Litigation Team
                                 
                 </a>
@@ -105,19 +105,20 @@
                 <a routerLink="volenteer-leaflet" class="drop-item small my-0 py-0">
                    
 
-                    Volenteer Leaflet Distributors
+                    Leaflet Distributors
                                                                 
                 </a>
                 <a routerLink="social-media" class="drop-item small my-0 py-0">
                    
 
-                    Volenteer Social Media Advocates
+                    Social Media Supporters
                                                                 
                 </a>
                 <a href="#" class="drop-item small my-0 py-0">
                    
 
-                    Volenteer PR Advocates
+                    Public Relations Professionals
+
                                                                 
                 </a>
               
@@ -125,7 +126,7 @@
                 </div>
 
               </div>
-              <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white">Complaints </a></li>
+              <li class="px-2  py-2 fw-semibold text-white"><a routerLink="complaints" class="text-white">Complaints </a></li>
 <div class="dropdown">
         <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white">Legal </a></li>
         <div class="dropdown-content w-100 py-2 px-2">
@@ -136,13 +137,13 @@
             Group Claims
                           
           </a>
-          <a href="#" class="drop-item small my-0 py-0">
+          <a routerLink="hmcts-group-claim" class="drop-item small my-0 py-0">
              
 
             Registers interest in HMCTS group claim
                                                           
           </a>
-          <a href="#" class="drop-item small my-0 py-0">
+          <a routerLink="nhs-group-claim" class="drop-item small my-0 py-0">
              
 
             Register interest in NHS group claim
