--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -21,7 +21,7 @@
 
             <li class="px-2  py-2 fw-semibold text-white"><a href="" class="text-white dropbtn">About</a></li>
                 <div class="dropdown-content w-100 py-2 px-2">
-                  <a class="drop-item small my-0 py-0">
+                  <a class="drop-item small pointer my-0 py-0">
                     The Change Champions
                 </a>
                 <a routerLink="Change-Champions-Litigation-Team" class="drop-item small my-0 py-0">
